# ros-

./: .gitignore  One_ClickBurning.md  readme.md  result_gitignore.md  terminator_history.md
.marscode/: deviceInfo.json
6_Mpu6050t1_ws/doc/: git_result.md  goal.md  result.md  trae.md
6_Mpu6050t1_ws/src/imu_serial/: package.xml  setup.py
6_Mpu6050t1_ws/src/imu_serial/imu_serial/: imu_node.py
command/: can_command.py
control/: motor_control.py  speed_calc.py
control/doc/: doc_motor.md  fix2.md  goal.md
control/doc/fix/fix_comparison/: result1.md
control/doc/fix_comparison/: fix1.md
frames/: frames_2026-04-09_13.45.01.gv  frames_2026-04-09_16.11.23.gv  frames_2026-04-10_20.35.57.gv  frames_2026-04-10_20.39.21.gv  frames_2026-04-10_21.43.39.gv
imu_odom_ws/: package.xml  setup.py
imu_odom_ws/doc/: claude_log.md
imu_odom_ws/scripts/: imu_odometry_node
imu_odom_ws/src/imu_odom_ws/: imu_odometry_node.py
other/: gemini_3d_2.py  gemini_3d_3_depth.py
unitree_goM80106/: CMakeLists.txt
unitree_goM80106/src/: LocationMode_8010t1.cpp  example_goM8010_6_motor.cpp  locationMode_8010t1.cpp  stopMode_8010t1.cpp
unitree_goM80106/src/doc/: 260511.md  locationMode_8010t1.md
vision/: gemini_3d.py  gemini_track2.py  gpt_CommandLine.py
vision/Spare/: detect_ball_node.py  gemini_3d_map​.py  gemini_track_test1.py  gpt_BallDetector_Line.py  gpt_CoordinateLine.py  gpt_ball_detector_node.py  gpt_track._test1.py  track_ball_node.py
vision/doc/: AiThinking3.md  goal.md  goal2.md  goal3.md  gpt_CommandLine.md  result.md  result2.md  result3.md
vision/good/: dynamic_ball_tracker_node.py  gpt_Com.md  gpt_Com_result.md  gpt_Com_t1.py  gpt_CommandLine.py
vision/other/: detect_ball.py
